--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+#
+# DB Credentials
+#
+spring.datasource.url=jdbc:mysql://localhost:3306/threat-analyzer
+spring.datasource.username=root
+spring.datasource.password=+v=.y=q6#pEX&dYH
 
+#
+# Hibernate ddl
+#
+spring.jpa.hibernate.ddl-auto=update
+
+#
+# Hibernate log
+#
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#
+# ?
+#
+spring.jpa.open-in-view=true
