--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,9 @@ spring.jpa.hibernate.ddl-auto=update
 #
 # Hibernate log
 #
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #
 # ?
